--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock Paper Scissors</title>
   </head>
-  <body>
+  <body id="container">
+    <div id="text-area">
+      <h1>Rock Paper Scissors Challenge!</h1>
+      <p>Do you dare challenge me? Choose your weapon!</p>
+    </div>
+    <div class="computerSelection"></div>
+    <div class="results"></div>
+    <div id="selections">
+      <button value="rock">Rock</button>
+      <button value="paper">Paper</button>
+      <button value="scissors">Scissors</button>
+    </div>
     <script src="external.js"></script>
   </body>
 </html>
